-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0
-
None
The BluetoothDeviceDiscoveryModel has some inconsistencies which need to be checked:
- newServiceDiscovered()
- parameter not documented
- newDeviceDiscovered()
- should signal have a parameter?
- how to retrieve the found devices (if not via signal)
- the overloading of data model content depending on the search may be confusing
These issues require potential API changes and must be addressed before API freeze.
- is required for
-
QTBUG-33305 Issues to be fixed before Qt5.2 Beta1 release
-
- Closed
-
| For Gerrit Dashboard: QTBUG-33678 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 67777,2 | BluetoothDiscoveryModel API fixes | stable | qt/qtconnectivity | Status: MERGED | +2 | 0 |