BluetoothDiscoveryModel API fixes

- rename signal: newServiceDiscovered -> serviceDiscovered
- rename signal: newDeviceDiscovered -> deviceDisovered
- add parameter to deviceDiscovered signal
- improve documentation for above signals
- minor example fixes

Task-number: QTBUG-33678
Change-Id: I2f9223250ef844564c3e76a85adc25322867fd6e
Reviewed-by: Fabian Bumberger <fbumberger@rim.com>
Reviewed-by: Alex Blasche <alexander.blasche@digia.com>